# customer-relation-database

./: .eslintrc.cjs  .gitignore  .mcp.json  .prettierignore  README.md  build-and-release.sh  build-local-macos.sh  build-windows.ps1  customer-relation.db  database.db  index.html  package-lock.json  package.json  playwright.config.ts  reset-db.js  test-view-switching.js  tsconfig.json  vite.config.ts  wdio.conf.ts
.github/scripts/: update-version.cjs
.github/workflows/: e2e-windows.yml  extract-secret.yml  release.yml
e2e/: backup-settings.spec.ts  dashboard-scan.spec.ts  flows.spec.ts
e2e-fullstack/: chip-only-patient.spec.ts  device-file-attach.spec.ts  medical-record-update.spec.ts  patient-roundtrip.spec.ts  smoke.spec.ts
e2e/helpers/: mockInvoke.ts
pdf-generator-cli/: build.gradle  gradlew
scripts/: reset-db.sh  seed-db.js
src/: App.module.css  App.tsx  main.tsx  test-calendar.tsx  test-setup.ts
src-tauri/: .env.example  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_households.sql  002_create_people.sql  003_create_person_contacts.sql  004_create_patient_households.sql  005_create_household_search_fts5.sql  005_drop_owner_tables.sql  006_add_patient_gender.sql  007_add_household_location_fields.sql  008_create_medical_records.sql  009_create_settings.sql  010_create_appointments.sql  011_add_room_color.sql  012_create_update_preferences.sql
src-tauri/src/: main.rs  test_utils.rs
src-tauri/src/commands/: appointments.rs  backup.rs  breed.rs  database.rs  database_reset.rs  debug.rs  dev_tools.rs  device_input.rs  device_integration.rs  diagnosis.rs  file_history.rs  google_calendar.rs  hid_devices.rs  household.rs  line_item.rs  managed_hid_scanner.rs  medical.rs  mod.rs  owner.rs  patient.rs  pdf_report.rs  pending.rs  relationship.rs  rooms.rs  settings.rs  species.rs  stats.rs  telemetry.rs  update_settings.rs  view_preference.rs
src-tauri/src/commands/hid_devices/: bt_names.rs
src-tauri/src/database/: config.rs  connection.rs  migrations.rs  mod.rs
src-tauri/src/database/migrations/: 001_initial_schema.sql  002_search_index.sql  003_add_patient_fields.sql  004_create_species.sql  005_create_device_integrations.sql  006_add_prescription_notes.sql  039_create_line_items.sql
src-tauri/src/database/queries/: household.rs  household_search.rs  mod.rs  owner.rs  patient.rs  relationship.rs  search.rs
src-tauri/src/entities/: app_settings.rs  appointment.rs  breed.rs  calendar_event_mapping.rs  currency.rs  device_integration.rs  file_access_history.rs  google_calendar_settings.rs  household.rs  line_item_template.rs  medical_attachment.rs  medical_record.rs  medical_record_history.rs  medical_record_line_item.rs  mod.rs  patient.rs  person.rs  person_contact.rs  record_template.rs  room.rs  species.rs  sync_log.rs  update_preferences.rs
src-tauri/src/models/: appointments.rs  breed.rs  device_integration.rs  diagnosis.rs  dto.rs  google_calendar.rs  hid_devices.rs  household.rs  line_item.rs  managed_hid_scanner.rs  medical.rs  mod.rs  owner.rs  patient.rs  patient_owner.rs  rooms.rs  settings.rs  species.rs  sync_log.rs  update_models.rs
src-tauri/src/services/: appointments.rs  backup.rs  breed.rs  device_capture.rs  device_input.rs  device_integration.rs  device_parser.rs  device_pdf_service.rs  diagnosis.rs  exigo_pdf_generator.rs  file_storage.rs  file_watcher.rs  google_calendar.rs  java_pdf_service.rs  line_item.rs  log_rotation.rs  loki_shipper.rs  managed_hid_scanner.rs  medical_record.rs  mod.rs  oauth.rs  patient.rs  pdf_render.rs  pdf_report_generator.rs  raw_input_capture.rs  rooms.rs  settings.rs  species.rs  sync.rs  sync_scheduler.rs  telemetry.rs
src-tauri/src/tests/: backup_tests.rs  contract_tests.rs  device_integration_tests.rs  device_parser_tests.rs  diagnosis_tests.rs  e2e_contract_tests.rs  file_storage_tests.rs  household_service_tests.rs  household_tests.rs  line_item_tests.rs  medical_record_service_tests.rs  medical_record_tests.rs  migration_tests.rs  mod.rs  patient_tests.rs  pending_file_history_tests.rs  settings_tests.rs  species_breed_currency_tests.rs
src-tauri/tests/: appointments_conflicts_test.rs  appointments_create_test.rs  appointments_delete_test.rs  appointments_duplicate_test.rs  appointments_get_test.rs  appointments_update_test.rs  db_migrations_google_calendar_test.rs  oauth_flow_test.rs  oauth_integration_test.rs  room_conflicts_integration_test.rs  rooms_test.rs  settings_api_test.rs  soft_delete_integration_test.rs  sync_integration_test.rs  sync_operations_test.rs  token_refresh_test.rs
src-tauri/tests/fixtures/: exigo_daily_two_samples.xml
src/components/: AppWrapper.tsx  EmptyState.tsx  HouseholdForm.tsx  HouseholdList.tsx  HouseholdSearch.tsx  LoadingSpinner.tsx  OwnerForm.tsx  OwnerSelect.tsx  PatientCard.tsx  PatientForm.tsx  PatientList.tsx  PdfInlineViewer.module.css  PdfInlineViewer.tsx  PdfMultiPagePreview.module.css  PdfMultiPagePreview.tsx  PendingDeviceList.tsx  PendingDeviceTable.tsx  RecentDeviceFiles.tsx  SearchBar.tsx  SearchView.tsx  Toast.tsx  ViewToggle.tsx  index.ts
src/config/: tableColumns.ts  theme.config.ts
src/contexts/: DeviceImportContext.tsx  ThemeContext.tsx  ViewContext.tsx  index.ts
src/hooks/: index.ts  useAppSettings.ts  useAppointments.ts  useAutoSave.ts  useBarcodeScanner.ts  useBreeds.ts  useCurrencies.ts  useDebounce.ts  useDeviceDataListener.ts  useDeviceIntegrations.ts  useDiagnoses.ts  useGoogleCalendar.ts  useHousehold.ts  useHouseholdSearch.ts  useHouseholds.ts  useLineItemTemplates.ts  (+12 more)
test-scripts/: check_com_ports.py  device_ports.json  device_ports_windows.json  exigo_test_proper.xml  serial_bridge.py  simulate_barcode.py  simulate_scanner.py  simulate_scanner_uinput.py  start_serial_test.ps1  start_serial_test.sh  test_devices.py  test_exigo_file_creator.py  test_healvet_full_panel.py  test_healvet_sender.py  test_mixed_samples.json  test_mnchip_pcr.py  test_mnchip_pcr_real.py  test_pcr_pdf.json  test_pcr_positive.json  test_pointcare.py
(+331 files in other folders)
