[package]
name = "vet-clinic"
version = "0.0.0"
description = "Veterinary Clinic Patient Management System"
authors = ["Veterinary Clinic Dev Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "window-print", "process-relaunch", "updater", "dialog-save", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8"
fake = { version = "2.9", features = ["derive"] }
pdfium-render = { version = "0.8" }
image = { version = "0.25", default-features = false, features = ["png"] }
# Google Calendar OAuth2 dependencies
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
warp = "0.3"
lazy_static = "1.4"
dotenv = "0.15"
serialport = "4.3"
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
notify = "6.1"
glob = "0.3"
quick-xml = "0.31"
printpdf = "0.7"
genpdf = "0.2"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
