[package]
name = "vet-clinic"
version = "0.0.0"
description = "Veterinary Clinic Patient Management System"
authors = ["Veterinary Clinic Dev Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "dialog-open", "window-print", "process-relaunch", "updater", "dialog-save", "fs-read-file", "shell-open", "test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"] }
# SQLx macros for FromRow derive (transitional - migrate to SeaORM entities gradually)
sqlx = { version = "0.8", default-features = false, features = ["macros", "sqlite"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8"
fake = { version = "2.9", features = ["derive"] }
# PDF rendering (for reading/previewing PDFs only, not creation)
pdfium-render = { version = "0.8" }
image = { version = "0.25", default-features = false, features = ["png"] }
# Google Calendar OAuth2 dependencies
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
lazy_static = "1.4"
once_cell = "1.19"
dotenv = "0.15"
serialport = "4.7" # Upgraded from 4.3 - critical Windows fixes in 4.4-4.7
regex = "1.11" # For parsing USB device paths in Windows registry
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
usb-ids = "1.2024.5" # Embedded USB vendor/product ID database for device identification
notify = "8.2"
glob = "0.3"
quick-xml = "0.31"
dirs = "5.0"
log = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sentry = "0.41"
# Pin transitive `time` below 0.3.47 — newer versions bumped MSRV to 1.88,
# but our toolchain is 1.86. Bump along with sentry/rustc when upgrading.
time = "=0.3.36"
# Generates TypeScript interfaces from #[derive(TS)] structs. The derive is a
# no-op at runtime in production; tests under tests/ts_gen.rs invoke
# `<Type as TS>::export()` to emit .ts files into src/types/generated/.
ts-rs = { version = "10", features = ["chrono-impl", "serde-compat"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
  "Win32_UI_Shell",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  # Raw Input API for observing managed scanner HID reports. Lets us capture
  # chip scans from specific VID/PID devices even when the app is in the
  # background. (Does not suppress focused-window typing — that would need
  # a WH_KEYBOARD_LL hook, see raw_input_capture.rs docs.)
  "Win32_UI_Input",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  # WNDCLASSEXW carries HBRUSH/HICON/HCURSOR — needs GDI types resolved
  "Win32_Graphics_Gdi",
] }
dunce = "1.0" # Convert Windows UNC paths to normal paths for Java compatibility
winreg = "0.52"

[dev-dependencies]
# Unique temp files/dirs per test — cleans up on drop so parallel tests don't collide.
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
